# anchor

cli/: Cargo.toml
client/: Cargo.toml
lang/: Cargo.toml
spl/: Cargo.toml
