[package]
name = "anchor-spl"
version = "0.30.1"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
edition = "2021"
license = "Apache-2.0"
description = "CPI clients for SPL programs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["associated_token", "mint", "token", "token_2022", "token_2022_extensions"]
associated_token = ["spl-associated-token-account"]
devnet = []
governance = []
idl-build = ["anchor-lang/idl-build"]
memo = ["spl-memo"]
metadata = ["mpl-token-metadata"]
mint = []
stake = ["borsh"]
token = ["spl-token"]
token_2022 = ["spl-token-2022"]
token_2022_extensions = ["spl-token-2022", "spl-token-group-interface", "spl-token-metadata-interface", "spl-pod"]

[dependencies]
anchor-lang = { path = "../lang", version = "0.30.1", features = ["derive"], default-features = false }
borsh = { version = ">=0.9, <0.11", optional = true, default-features = false }
mpl-token-metadata = { version = "4", optional = true, default-features = false }
spl-associated-token-account = { version = "4", features = ["no-entrypoint"], optional = true, default-features = false }
spl-memo = { version = "5", features = ["no-entrypoint"], optional = true, default-features = false }
spl-token = { version = "6", features = ["no-entrypoint"], optional = true, default-features = false }
spl-token-2022 = { version = "4", features = ["no-entrypoint"], optional = true, default-features = false }
spl-token-group-interface = { version = "0.3", optional = true, default-features = false }
spl-token-metadata-interface = { version = "0.4", optional = true, default-features = false }
spl-pod = { version = "0.3", optional = true, default-features = false }
